@@ -374,6 +374,8 @@ void CShellExt::InsertSVNMenu(BOOL ownerdrawn, BOOL istop, HMENU menu, UINT pos,
 	// (drawitem callback uses absolute, others relative)
 	myIDMap[id - idCmdFirst] = com;
 	myIDMap[id] = com;
+	if (!istop)
+		mySubMenuMap[pos] = com;
 }
 
 HBITMAP CShellExt::IconToBitmap(UINT uIcon, COLORREF transparentColor)
@@ -1457,7 +1459,7 @@ STDMETHODIMP CShellExt::HandleMenuMsg(UINT uMsg, WPARAM wParam, LPARAM lParam)
    return HandleMenuMsg2(uMsg, wParam, lParam, &res);
 }
 
-STDMETHODIMP CShellExt::HandleMenuMsg2(UINT uMsg, WPARAM /*wParam*/, LPARAM lParam, LRESULT *pResult)
+STDMETHODIMP CShellExt::HandleMenuMsg2(UINT uMsg, WPARAM wParam, LPARAM lParam, LRESULT *pResult)
 {
 //a great tutorial on owner drawn menus in shell extension can be found
 //here: http://www.codeproject.com/shell/shellextguide7.asp
@@ -1554,7 +1556,6 @@ STDMETHODIMP CShellExt::HandleMenuMsg2(UINT uMsg, WPARAM /*wParam*/, LPARAM lPar
 
 					int tempY = lpdis->rcItem.top + ((lpdis->rcItem.bottom - lpdis->rcItem.top) - bm.bmHeight) / 2;
 					SetRect(&rt, ix, tempY, ix + 16, tempY + 16);
-
 					ExtTextOut(lpdis->hDC, 0, 0, ETO_CLIPPED|ETO_OPAQUE, &rtTemp, NULL, 0, (LPINT)NULL);
 					rtTemp.left = rt.right;
 
@@ -1579,20 +1580,99 @@ STDMETHODIMP CShellExt::HandleMenuMsg2(UINT uMsg, WPARAM /*wParam*/, LPARAM lPar
 				iy = lpdis->rcItem.top + (iy>=0 ? iy : 0);
 				SetRect(&rt, ix , iy, lpdis->rcItem.right - 4, lpdis->rcItem.bottom);
 				ExtTextOut(lpdis->hDC, ix, iy, ETO_CLIPPED|ETO_OPAQUE, &rtTemp, NULL, 0, (LPINT)NULL);
+				UINT uFormat = DT_LEFT|DT_EXPANDTABS;
+				// only draw accelerators on the submenu!
+				// Reason: we only get the WM_MENUCHAR message if the *whole* menu is ownerdrawn,
+				// which the top level context menu is *not*. So drawing there the accelerators
+				// is futile because they won't get used.
+				if ((_tcsncmp(szItem, _T("SVN"), 3)==0)||(myIDMap[lpdis->itemID] == SubMenu))
+					uFormat |= DT_HIDEPREFIX;
+				else
+					uFormat |= (lpdis->itemState & ODS_NOACCEL) ? DT_HIDEPREFIX : 0;
 				if (lpdis->itemState & ODS_GRAYED)
 				{        
 					SetBkMode(lpdis->hDC, TRANSPARENT);
 					OffsetRect( &rt, 1, 1 );
 					SetTextColor( lpdis->hDC, RGB(255,255,255) );
-					DrawText( lpdis->hDC, szItem, lstrlen(szItem), &rt, DT_LEFT|DT_EXPANDTABS );
+					DrawText( lpdis->hDC, szItem, lstrlen(szItem), &rt, uFormat );
 					OffsetRect( &rt, -1, -1 );
 					SetTextColor( lpdis->hDC, RGB(128,128,128) );
-					DrawText( lpdis->hDC, szItem, lstrlen(szItem), &rt, DT_LEFT|DT_EXPANDTABS );         
+					DrawText( lpdis->hDC, szItem, lstrlen(szItem), &rt, uFormat );         
 				}
 				else
-					DrawText( lpdis->hDC, szItem, lstrlen(szItem), &rt, DT_LEFT|DT_EXPANDTABS );
+					DrawText( lpdis->hDC, szItem, lstrlen(szItem), &rt, uFormat );
 			}
 			*pResult = TRUE;
+		}
+		break;
+		case WM_MENUCHAR:
+		{
+			LPCTSTR resource;
+			TCHAR *szItem;
+			if (HIWORD(wParam) != MF_POPUP)
+				return NOERROR;
+			int nChar = LOWORD(wParam);
+			if (_istascii((wint_t)nChar) && _istupper((wint_t)nChar))
+				nChar = tolower(nChar);
+			// we have the char the user pressed, now search that char in all our
+			// menu items
+			std::vector<int> accmenus;
+			for (std::map<UINT_PTR, int>::iterator It = mySubMenuMap.begin(); It != mySubMenuMap.end(); ++It)
+			{
+				resource = GetMenuTextFromResource(mySubMenuMap[It->first]);
+				if (resource == NULL)
+					continue;
+				szItem = stringtablebuffer;
+				TCHAR * amp = _tcschr(szItem, '&');
+				if (amp == NULL)
+					continue;
+				amp++;
+				int ampChar = LOWORD(*amp);
+				if (_istascii((wint_t)ampChar) && _istupper((wint_t)ampChar))
+					ampChar = tolower(ampChar);
+				if (ampChar == nChar)
+				{
+					// yep, we found a menu which has the pressed key
+					// as an accelerator. Add that menu to the list to
+					// process later.
+					accmenus.push_back(It->first);
+				}
+			}
+			if (accmenus.size() == 0)
+			{
+				// no menu with that accelerator key.
+				*pResult = MAKELONG(0, MNC_IGNORE);
+				return NOERROR;
+			}
+			if (accmenus.size() == 1)
+			{
+				// Only one menu with that accelerator key. We're lucky!
+				// So just execute that menu entry.
+				*pResult = MAKELONG(accmenus[0], MNC_EXECUTE);
+				return NOERROR;
+			}
+			if (accmenus.size() > 1)
+			{
+				// we have more than one menu item with this accelerator key!
+				MENUITEMINFO mif;
+				mif.cbSize = sizeof(MENUITEMINFO);
+				mif.fMask = MIIM_STATE;
+				for (std::vector<int>::iterator it = accmenus.begin(); it != accmenus.end(); ++it)
+				{
+					GetMenuItemInfo((HMENU)lParam, *it, TRUE, &mif);
+					if (mif.fState == MFS_HILITE)
+					{
+						// this is the selected item, so select the next one
+						++it;
+						if (it == accmenus.end())
+							*pResult = MAKELONG(accmenus[0], MNC_SELECT);
+						else
+							*pResult = MAKELONG(*it, MNC_SELECT);
+						return NOERROR;
+					}
+				}
+				*pResult = MAKELONG(accmenus[0], MNC_SELECT);
+			}
 		}
 		break;
 		default:
