@@ -186,26 +186,26 @@ END
 
 STRINGTABLE 
 BEGIN
-    IDS_MENUCHECKOUT        "Checkout..."
-    IDS_MENUUPDATE          "Update"
-    IDS_MENUCOMMIT          "Commit..."
-    IDS_MENUCREATEREPOS     "Create Repository here..."
-    IDS_MENUADD             "Add..."
-    IDS_MENUREVERT          "Revert..."
-    IDS_MENUCLEANUP         "Clean Up"
-    IDS_MENURESOLVE         "Resolved..."
+    IDS_MENUCHECKOUT        "Chec&kout..."
+    IDS_MENUUPDATE          "&Update"
+    IDS_MENUCOMMIT          "&Commit..."
+    IDS_MENUCREATEREPOS     "Create Repositor&y here..."
+    IDS_MENUADD             "&Add..."
+    IDS_MENUREVERT          "Re&vert..."
+    IDS_MENUCLEANUP         "&Clean Up"
+    IDS_MENURESOLVE         "Res&olved..."
 END
 
 STRINGTABLE 
 BEGIN
-    IDS_MENUSWITCH          "Switch..."
-    IDS_MENUMERGE           "Merge..."
-    IDS_MENUBRANCH          "Branch/Tag..."
-    IDS_MENUIMPORT          "Import..."
-    IDS_MENUEXPORT          "Export..."
-    IDS_MENUSETTINGS        "Settings"
-    IDS_MENUABOUT           "About"
-    IDS_MENUSUBMENU         "TortoiseSVN"
+    IDS_MENUSWITCH          "S&witch..."
+    IDS_MENUMERGE           "&Merge..."
+    IDS_MENUBRANCH          "Branch/&Tag..."
+    IDS_MENUIMPORT          "&Import..."
+    IDS_MENUEXPORT          "E&xport..."
+    IDS_MENUSETTINGS        "&Settings"
+    IDS_MENUABOUT           "A&bout"
+    IDS_MENUSUBMENU         "&TortoiseSVN"
     IDS_MENUDESCCHECKOUT    "Check out a working copy from a repository"
     IDS_MENUDESCUPDATE      "Updates the working copy to the current revision"
     IDS_MENUDESCCOMMIT      "Commits your changes to the repository"
@@ -244,11 +244,11 @@ BEGIN
     IDS_PROPLOCKED          "locked"
     IDS_PROPPROPERTY        "Property"
     IDS_PROPVALUE           "Value"
-    IDS_MENURENAME          "Rename..."
+    IDS_MENURENAME          "Re&name..."
     IDS_MENUDESCRENAME      "Renames files / folders inside source control"
-    IDS_MENUREMOVE          "Delete"
+    IDS_MENUREMOVE          "&Delete"
     IDS_MENUDESCREMOVE      "Deletes files / folders from source control"
-    IDS_MENUUPDATEEXT       "Update To Revision..."
+    IDS_MENUUPDATEEXT       "&Update To Revision..."
     IDS_MENUDESCUPDATEEXT   "Updates the working copy to a specific revision"
     IDS_COLTITLESTATUS      "SVN Status"
     IDS_COLDESCSTATUS       "Status of item in SVN"
@@ -258,9 +258,9 @@ END
 
 STRINGTABLE 
 BEGIN
-    IDS_MENUSHOWCHANGED     "Check for Modifications"
+    IDS_MENUSHOWCHANGED     "Check for Modi&fications"
     IDS_MENUDESCSHOWCHANGED "Shows all files which were changed since the last update, locally and in the repository"
-    IDS_MENUIGNORE          "Add To Ignore List"
+    IDS_MENUIGNORE          "Add To &Ignore List"
     IDS_MENUDESCIGNORE      "Adds the selected file(s) or the filemask to the 'ignore' list"
     IDS_STATUSINCOMPLETE    "incomplete"
     IDS_STATUSIGNORED       "ignored"
@@ -269,30 +269,30 @@ BEGIN
     IDS_SETPROPTITLE        "Setting Properties..."
     IDS_MENUREPOBROWSE      "Repo-Browser"
     IDS_MENUDESCREPOBROWSE  "Opens the repository browser to tweak the repository online"
-    IDS_MENUBLAME           "Blame..."
+    IDS_MENUBLAME           "&Blame..."
     IDS_STATUSEXTERNAL      "external"
     IDS_MENUDESCBLAME       "Blames each line of a file on an author"
-    IDS_MENUCREATEPATCH     "Create Patch..."
-    IDS_MENUAPPLYPATCH      "Apply Patch..."
+    IDS_MENUCREATEPATCH     "Create &Patch..."
+    IDS_MENUAPPLYPATCH      "Apply &Patch..."
 END
 
 STRINGTABLE 
 BEGIN
-    IDS_MENUDIFF            "Diff"
+    IDS_MENUDIFF            "&Diff"
     IDS_MENUDESCDIFF        "Compares the file with the last committed revision to show you the changes you made"
     IDS_DROPCOPYADDMENU     "SVN Add files to this WC"
     IDS_DROPMOVEMENU        "SVN Move versioned files here"
-    IDS_MENULOG             "Show Log"
+    IDS_MENULOG             "Show &Log"
     IDS_MENUDESCLOG         "Shows the log for the selected file / folder"
     IDS_COLTITLEURL         "SVN Url"
     IDS_COLDESCURL          "URL of Subversion items"
     IDS_COLTITLESHORTURL    "SVN short Url"
     IDS_COLDESCSHORTURL     "Short Url of Subversion items"
-    IDS_MENUCONFLICT        "Edit Conflicts"
+    IDS_MENUCONFLICT        "&Edit Conflicts"
     IDS_MENUDESCCONFLICT    "Launches the external diff / merge program to solve the conflicts"
-    IDS_MENURELOCATE        "Relocate..."
+    IDS_MENURELOCATE        "Relo&cate..."
     IDS_MENUDESCRELOCATE    "Use this if the URL of the repository has changed"
-    IDS_MENUHELP            "Help"
+    IDS_MENUHELP            "&Help"
     IDS_MENUDESCHELP        "Read the 'Daily Use Guide' before you are stuck..."
 END
 
@@ -327,29 +327,29 @@ BEGIN
                             "tsvn:logfilelistenglish\nSet to ""false"" if you don't want the list of changed files to be pasted in english\nin the commit dialog."
     IDS_TT_BQAPPEND         "bugtraq:append\nSet to ""false"" if you want the bugtracking ID to be inserted at the top of the\nlog message. The default is ""true"" which means the bugtracking ID\nis appended to the log message."
     IDS_ERR_PROPNOTONFILE   "This property is only allowed on folders, not files."
-    IDS_MENUIGNOREMULTIPLE  "Ignore %d items"
+    IDS_MENUIGNOREMULTIPLE  "&Ignore %d items"
     IDS_ERR_PROPNOMULTILINE "This property must not have multiple lines. Only one line is allowed."
-    IDS_MENUREVISIONGRAPH   "Revision Graph"
+    IDS_MENUREVISIONGRAPH   "Revision &Graph"
     IDS_MENUDESCREVISIONGRAPH 
                             "Shows a graphical representation of copies/tags/branches"
     IDS_TT_TSVNPROJECTLANGUAGE 
                             "tsvn:projectlanguage\nSet this to the language number you want your log messages written in.\nTortoiseSVN will then load the appropriate spell checker module if available."
     IDS_TT_BQLOGREGEX       "bugtraq:logregex\ntwo regular expressions separated by a newline\nThe first expression is used to find a string referring to an issue, the second expression is used to extract the bare bug ID from that string."
-    IDS_MENUUNIGNORE        "Remove From Ignore List"
+    IDS_MENUUNIGNORE        "Remove From &Ignore List"
     IDS_MENUDESCUNIGNORE    "Removes the file or filemask from the list of ignored items"
     IDS_TT_RECURSIVE        "Applies the properties recursively to all files/folders.\nbugtraq: and tsvn: properties are only applied to folders."
 END
 
 STRINGTABLE 
 BEGIN
-    IDS_MENU_LOCK           "Get Lock..."
-    IDS_MENU_UNLOCK         "Release Lock"
+    IDS_MENU_LOCK           "Get Loc&k..."
+    IDS_MENU_UNLOCK         "Release Loc&k"
     IDS_MENUDESC_LOCK       "Locks a file for other users and makes it editable by you."
     IDS_MENUDESC_UNLOCK     "Releases locks on files so other users can edit them again."
-    IDS_MENU_UNLOCKFORCE    "Break Lock"
+    IDS_MENU_UNLOCKFORCE    "Break Loc&k"
     IDS_MENUDESC_UNLOCKFORCE 
                             "Releases locks even if you're not the owner of the locks (breaks them)."
-    IDS_MENU_LOCKFORCE      "Steal Lock"
+    IDS_MENU_LOCKFORCE      "Steal Loc&k"
     IDS_COLTITLEOWNER       "SVN Lock Owner"
     IDS_COLDESCOWNER        "The user who owns the lock of the file"
     IDS_TT_NEEDSLOCK        "svn:needs-lock\nSet this to any value (e.g. '*') to enforce locking for this file.\nThe file will be set to read-only when checked out or updated,\nindicating that a user must acquire a lock on the file\nbefore they can edit it and commit changes."
